--- a/Lib/Neon.Kube/Resources/Helm/tempo/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/tempo/values.yaml
@@ -141,7 +141,15 @@ tolerations:
 ## Affinity for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
 ##
-affinity: {}
+affinity:
+  podAntiAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchLabels:
+              app.kubernetes.io/name: tempo
+          topologyKey: kubernetes.io/hostname
 
 serviceMonitor:
   enabled: true
