--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -80,6 +80,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\Helm\neon-cluster-operator\crds\" />
+    <Folder Include="Resources\Helm\neon-cluster-operator\templates\" />
     <Folder Include="Resources\Helm\neon-kube-resources\" />
   </ItemGroup>
 
