--- a/Services/neon-cluster-operator/neon-cluster-operator.csproj
+++ b/Services/neon-cluster-operator/neon-cluster-operator.csproj
@@ -92,12 +92,12 @@
   KubeOps build target that generates the CRDs and other Kubernmetes manifest and kustomization files.
   -->
 
-  <Target Name="PublishCRDs" AfterTargets="GenerateAfterBuild">
+  <!--<Target Name="PublishCRDs" AfterTargets="GenerateAfterBuild">
     <Message Importance="high" Text="*** PublishCRDs ***"/>
     <Delete Files="$(SolutionDir)Lib\Neon.Kube.Setup\$(MSBuildProjectName)\*"/>
     <Message Importance="high" Text="SOURCE FILES: $(ProjectDir)config.gitignore\crds\*"/>
     <Message Importance="high" Text="DESTINATION: $(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds)"/>
     <Copy SourceFiles="$(ProjectDir)config.gitignore\crds\*" DestinationFolder="$(SolutionDir)Lib\Neon.Kube.Setup\Resources\Helm\$(MSBuildProjectName)\crds"/>
-  </Target>
+  </Target>-->
   
 </Project>
