switched to dex

--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
@@ -36,9 +36,13 @@ data:
           node: ${HOSTNAME}
         scrape_interval: {{ .Values.metrics.global.scrapeInterval | default "60s" }}
       wal_directory: /var/lib/agent/data
+      wal_cleanup_age: 1h
+      wal_cleanup_period: 15m
       configs:
         - name: node
           host_filter: false
+          wal_truncate_frequency: 15m
+          max_wal_time: 1h
           scrape_configs:
             - job_name: crio
               scrape_interval:  {{ .Values.metrics.crio.scrapeInterval | default "60s" }}
@@ -49,6 +53,8 @@ data:
                     instance: ${HOSTNAME}
         - host_filter: true
           name: agent
+          wal_truncate_frequency: 15m
+          max_wal_time: 1h
           remote_write:
             - url: http://cortex:9009/api/prom/push
               headers: 
