--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/operator.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/operator.yaml
@@ -32,8 +32,8 @@ spec:
             - --grafana-plugins-init-container-image={{ .Values.pluginsInit.image.organization }}/{{ .Values.pluginsInit.image.repository }}
             - --grafana-plugins-init-container-tag={{ .Values.pluginsInit.image.tag }}
             - --scan-all
-            - --zap-log-level=info
-            - --zap-stacktrace-level=info
+            - --zap-log-level=error
+            - --zap-stacktrace-level=error
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
           env:
             - name: TEMPLATE_PATH
