--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/grafana.yaml
@@ -19,19 +19,18 @@ spec:
       oauth_auto_login: true
     auth.generic_oauth:
       api_url: >-
-        https://dex.{{ .Values.cluster.domain }}
+        https://sso.{{ .Values.cluster.domain }}/userinfo
       auth_url: >-
-        https://dex.{{ .Values.cluster.domain }}
+        https://sso.{{ .Values.cluster.domain }}/auth
       client_id: $__env{CLIENT_ID}
       client_secret: $__env{CLIENT_SECRET}
       empty_scopes: false
       enabled: true
       scopes: openid email profile groups
       token_url: >-
-        https://dex.{{ .Values.cluster.domain }}
+        https://sso.{{ .Values.cluster.domain }}/token
       role_attribute_path: >-
-        contains(roles[*], 'admin') && 'Admin' || contains(roles[*], 'editor')
-        && 'Editor' || 'Viewer'
+        contains(groups[*], 'superadmin') && 'Admin' || contains(groups[*], 'admin') && 'Editor' || 'Viewer'
     database:
       type: postgres
       host: db-citus-postgresql.neon-system.svc.cluster.local
@@ -62,11 +61,9 @@ spec:
       reloader.stakater.com/search: "true"
     envFrom:
       - secretRef:
-          name: grafana-db-password
+          name: grafana-secret
       - secretRef:
           name: grafana-env
-      - secretRef:
-          name: keycloak-client-secret-grafana
     nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
   dashboardLabelSelector:
