--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -101,7 +101,15 @@ tenants:
           neonkube.io/monitor.metrics-internal: 'true'
         ## Affinity settings for MinIO pods. Read more about affinity
         ## here: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity.
-        affinity: {}
+        affinity:
+          podAntiAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 100
+                podAffinityTerm:
+                  labelSelector:
+                    matchLabels:
+                      v1.min.io/tenant: minio
+                  topologyKey: kubernetes.io/hostname
         ## Configure resource requests and limits for MinIO containers
         resources:
           requests:
@@ -162,9 +170,9 @@ tenants:
       - name: MINIO_PROMETHEUS_AUTH_TYPE
         value: public
       - name: MINIO_IDENTITY_OPENID_SCOPES
-        value: "openid email profile groups"
+        value: openid,email,profile,groups
       - name: MINIO_IDENTITY_OPENID_CLAIM_NAME
-        value: roles
+        value: groups
     ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
     ## This is applied to MinIO pods only.
     ## Refer Kubernetes documentation for details https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass/
@@ -175,6 +183,16 @@ tenants:
         app: minio-sm
 
     priorityClassName: ""
+
+clients:
+  version: '10'
+  aliases:
+    minio:
+      url: http://minio.neon-system
+      accessKey: ''
+      secretKey: ''
+      api: S3v4
+      path: auto
 
 ingress:
   operator:
