--- a/Lib/Neon.Kube/Resources/Helm/oauth2-proxy/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/oauth2-proxy/values.yaml
@@ -40,6 +40,8 @@ config:
     skip_provider_button = true 
     standard_logging = true 
     request_logging = true
+    auth_logging = true
+    silence_ping_logging = true
     pass_authorization_header = true 
     pass_access_token = true
     set_authorization_header = true
